# server/Routes/expertRoute.js
@@ -1,45 +1,3 @@
-/**
- * @swagger
- * swagger: '2.0'
- * /expert/signup:
- *  post:
- *    description: Use to register a new expert
- *    parameters:
- *      - name: username
- *        description: The name of the expert
- *        in: body
- *        required: true
- *        schema:
- *          type: string
- *      - name: email
- *        description: The email of the expert
- *        in: body
- *        required: true
- *        schema:
- *          type: string
- *          format: email
- *      - name: password
- *        description: The password of the expert
- *        in: body
- *        required: true
- *        schema:
- *          type: string
- *          format: password
- *      - name: mobile
- *        description: The mobile number of the expert
- *        in: body
- *        required: true
- *        schema:
- *          type: integer
- *          format: number
- *    responses:
- *      '201':
- *        description: The expert has been registered successfully
- *      '401':
- *        description: The expert registration was unsuccessful
- */
-
-
 const express = require('express')
 const router = express.Router()
 const expertControl = require("../Controller/expertControl")
