# server/swagger.json
@@ -39,6 +39,64 @@
         }
       }
     },
+    "/expert/signup": {
+      "post": {
+        "description": "Expert signup ",
+        "tags": [
+          "Expert"
+        ],
+        "summary": "Expert signup",
+        "parameters": [
+          {
+            "name": "username",
+            "description": "The name of the expert",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "email",
+            "description": "The email of the expert",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "email"
+            }
+          },
+          {
+            "name": "password",
+            "description": "The password of the expert",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "password"
+            }
+          },
+          {
+            "name": "mobile",
+            "description": "The mobile number of the expert",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "number"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "The OTP sent successfully"
+          },
+          "401": {
+            "description": "The expert already exists or unsuccessful"
+          }
+        }
+      }
+    },
     "/expert/profile": {
       "get": {
         "tags": [
